# observability

./: .env.example  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  docker-compose.yml
.github/: CODEOWNERS
.github/workflows/: build-and-test.yml  ci.yml
observability-solution/: alertmanager.yml  blackbox.yml  prometheus.yml
observability-solution/grafana/provisioning/dashboards/: blackbox.json
observability-solution/grafana/provisioning/datasources/: prometheus-data-source.yml
observability-solution/rules/: alerts.yml
observability-test-app/: .dockerignore  Dockerfile  main.py  pyproject.toml  utils.py
observability-test-app/api/: __init__.py
observability-test-app/api/api_v1/: __init__.py
observability-test-app/api/api_v1/endpoints/: __init__.py
observability-test-app/api/api_v2/: __init__.py
observability-test-app/core/: config.py  logging_setup.json
scripts/: generate-dashboard.sh
